package ua.khpi.oop.lab10;

public interface Bookable {
    void book();
}
