package ua.khpi.oop.lab10;

public interface Cleanable {
    void clean();
}
