package ua.khpi.oop.lab10;

public interface Reservable {
    void reserve();
}
