@startuml
title Lab 10 - Custom Generic Container and Iterator in Hotel Booking System

interface Iterable<T>
interface Iterator<T>

interface Reservable {
  + reserve(): void
}

interface Bookable {
  + book(): void
}

interface Cleanable {
  + clean(): void
}

abstract class Room {
  - String roomNumber
  - String roomType
  - double pricePerNight
  - boolean available
  + getRoomNumber(): String
  + getRoomType(): String
  + getPricePerNight(): double
  + isAvailable(): boolean
  + book(): void
  + release(): void
  + getDescription(): String
}

class StandardRoom {
  - boolean hasBreakfast
  + hasBreakfast(): boolean
  + reserve(): void
}

class FamilyRoom {
  - int capacity
  + getCapacity(): int
  + reserve(): void
}

class LuxuryRoom {
  - boolean hasJacuzzi
  - double luxuryMultiplier
  + hasJacuzzi(): boolean
  + reserve(): void
  + clean(): void
}

class Customer {
  - String customerId
  - String fullName
  - String phone
  + getCustomerId(): String
  + getFullName(): String
  + getPhone(): String
}

class VipCustomer {
  - int bonusLevel
  + getBonusLevel(): int
}

class Reservation {
  - String reservationId
  - Customer customer
  - Room room
  - LocalDate checkInDate
  - LocalDate checkOutDate
  - boolean active
  + getReservationId(): String
  + getCustomer(): Customer
  + getRoom(): Room
  + getNights(): int
  + overlapsWith(Reservation other): boolean
  + totalCost(): double
  + cancel(): void
}

class BookingLink<TCustomer, TResource> {
  - TCustomer customer
  - TResource resource
  + getCustomer(): TCustomer
  + getResource(): TResource
  + createReservation(String, int): Reservation
}

class ReservationRecord<TReservation, TMeta> {
  - TReservation reservation
  - TMeta metadata
  + getReservation(): TReservation
  + getMetadata(): TMeta
}

class ReservationContainer<T> {
  - T[] items
  - int size
  - int capacity
  + add(T item): void
  + get(int index): T
  + set(int index, T item): T
  + remove(int index): T
  + contains(T item): boolean
  + clear(): void
  + size(): int
  + capacity(): int
  + isEmpty(): boolean
  + iterator(): Iterator<T>
}

class ReservationContainerIterator {
  - int currentIndex
  + hasNext(): boolean
  + next(): T
}

class BookingSchedule<TReservation> {
  - ReservationContainer<TReservation> reservations
  + addReservation(TReservation reservation): void
  + isRoomAvailable(Room, LocalDate, LocalDate): boolean
  + getReservations(): ReservationContainer<TReservation>
}

class BookingUtils {
  + {static} findMostExpensiveRoom(List<TRoom>): TRoom
  + {static} findFirstAvailableRoom(List<TRoom>): TRoom
}

Room <|-- StandardRoom
Room <|-- FamilyRoom
Room <|-- LuxuryRoom
Customer <|-- VipCustomer
Reservable <|.. StandardRoom
Reservable <|.. FamilyRoom
Reservable <|.. LuxuryRoom
Bookable <|.. FamilyRoom
Cleanable <|.. LuxuryRoom

Reservation --> Customer
Reservation --> Room
BookingLink --> Customer
BookingLink --> Room
ReservationRecord --> Reservation
BookingSchedule *-- ReservationContainer
ReservationContainer ..|> Iterable
ReservationContainerIterator ..|> Iterator
ReservationContainer *-- ReservationContainerIterator

@enduml
